--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
     <div class="row" id="titlerow">
         <div class="col-md-1">
-                <h1>ani srikanth</h1>
+                <a onclick="transitionBack()" href="#"><h1>ani srikanth</h1></a>
         </div>
         <div class="col-md-1 col-md-offset-9">
             <h1 id="page">home</h1>
@@ -53,10 +53,10 @@
         </div>
         <div class="row">
             <div class="col-md-6 text-center">
-                <a href="http://instagram.com/animanny"><p style="font-family: 'Quicksand', sans-serif;">Instagram</p></a>
+                <a href="http://instagram.com/animanny" target="_blank"><p style="font-family: 'Quicksand', sans-serif;">Instagram</p></a>
             </div>
             <div class="col-md-6 text-center">
-                <a href="http://vsco.co/animanny"><p style="font-family: 'Quicksand', sans-serif;">VSCO</p></a>
+                <a href="http://vsco.co/animanny" target="_blank"><p style="font-family: 'Quicksand', sans-serif;">VSCO</p></a>
             </div>
         </div>
         <hr>
@@ -84,11 +84,20 @@
                 <a onclick="transitionBack()" href="#"><p style="font-family: 'Quicksand', sans-serif;" id="exit">x</p></a>
             </div>
         </div>
-        <div class="row" style="position: relative; top: 50%; transform: translateY(-50%);">
-        <center>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/AelpCzdSlcY" frameborder="0" allowfullscreen></iframe>
-            
-        </center>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/AelpCzdSlcY"></iframe>
+                </div>
+                <!--<div class="intrinsic-container-16x9">
+                    <iframe width="560" height="349" src="" frameborder="0" allowfullscreen></iframe>
+                </div>
+                <iframe width="100%" height="56.25%" src="https://www.youtube.com/embed/-Dco4e6H4gY" frameborder="0" allowfullscreen></iframe>
+                <iframe width="100%" height="56.25%" src="https://www.youtube.com/embed/wI5KWtFJOYU" frameborder="0" allowfullscreen></iframe>
+                <iframe width="100%" height="56.25%" src="https://www.youtube.com/embed/4Gq1adxiyjQ" frameborder="0" allowfullscreen></iframe>
+                <iframe width="100%" height="56.25%" src="https://www.youtube.com/embed/7p65KD1nctI" frameborder="0" allowfullscreen></iframe>
+                <iframe width="100%" height="56.25%" src="https://player.vimeo.com/video/182915447" frameborder="0" allowfullscreen></iframe>-->
+            </div>
         </div>
     </div>
         
