--- a/index.html
+++ b/index.html
@@ -87,8 +87,24 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/-Dco4e6H4gY"></iframe> 
+                </div>
+                <div class="embed-responsive embed-responsive-16by9">
                     <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/AelpCzdSlcY"></iframe> 
                 </div>
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/wI5KWtFJOYU"></iframe> 
+                </div>
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/4Gq1adxiyjQ"></iframe> 
+                </div>
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/7p65KD1nctI"></iframe> 
+                </div>
+                <div class="embed-responsive embed-responsive-16by9">
+                    <iframe class="embed-responsive-item" src="https://player.vimeo.com/video/182915447"></iframe> 
+                </div>
+                
                 <!--<div class="intrinsic-container-16x9">
                     <iframe width="560" height="349" src="" frameborder="0" allowfullscreen></iframe>
                 </div>
